update test post comment
